fix(navBar) : z-index 수정

--- a/src/components/styles/fixedLayout.module.css
+++ b/src/components/styles/fixedLayout.module.css
@@ -61,7 +61,7 @@
   margin: 0 auto;
   width: 100%;
   max-width: 640px;
-  z-index: 1000;
+  z-index: 100;
 }
 
 
